--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             .beginFill("#ff0000", 0.5)
             .drawRect(0, 0, 100, 100);
 
-        shape.filters = [new BlurFilter(10, 10)];
+        shape.filters = [new BlurFilter(10, 10, 1)];
 
         // const count = 8000;
         // const root = next2d
