--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         const root = await next2d.createRootMovieClip(400, 400, 60);
         const { Shape } = next2d.display;
-        const { BlurFilter } = next2d.filters;
+        const { BlurFilter, ColorMatrixFilter } = next2d.filters;
         const shape = root.addChild(new Shape());
 
         shape.x = 150;
@@ -25,7 +25,15 @@
             .beginFill("#ff0000", 0.5)
             .drawRect(0, 0, 100, 100);
 
-        shape.filters = [new BlurFilter(10, 10, 1)];
+        shape.filters = [
+            new BlurFilter(10, 10, 1),
+            new ColorMatrixFilter([
+                0.393, 0.769, 0.189, 0, 0,
+                0.349, 0.686, 0.168, 0, 0,
+                0.272, 0.534, 0.131, 0, 0,
+                0, 0, 0, 1, 0
+            ])
+        ];
 
         // const count = 8000;
         // const root = next2d
