--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             shape.scaleX = 0.5;
             shape.scaleY = 0.5;
             shape.filters = [
-                // new BlurFilter(14, 14, 1),
+                new BlurFilter(10, 10, 1),
                 // new DropShadowFilter(20, 45, 0, 0.5),
                 // new ColorMatrixFilter([
                 //     0.393, 0.769, 0.189, 0, 0,
@@ -44,7 +44,8 @@
                 //     0, 0, 0, 1, 0
                 // ]),
                 // new GlowFilter(0, 1, 10, 10, 1, 1),
-                // new BevelFilter(4, 45, 0x0000ff, 1, 0, 1, 10, 10, 2, 1)
+                // new BevelFilter(4, 45, 0x0000ff, 1, 0, 1, 10, 10, 2, 1),
+                // new GradientBevelFilter()
             ];
         });
 
