--- a/index.html
+++ b/index.html
@@ -10,65 +10,7 @@
 <script>
     window.addEventListener("DOMContentLoaded", async () => 
     {
-        // next2d.load("develop");
-
-        const root = await next2d.createRootMovieClip(400, 400, 60);
-        const { Shape, BitmapData } = next2d.display;
-        const { Event } = next2d.events;
-        const {
-            BlurFilter,
-            ColorMatrixFilter,
-            GlowFilter,
-            BevelFilter,
-            GradientBevelFilter,
-            GradientGlowFilter,
-            DropShadowFilter,
-            ConvolutionFilter,
-            DisplacementMapFilter
-        } = next2d.filters;
-
-        const image = new Image();
-        image.addEventListener("load", () => 
-        {
-            const bitmapData = new BitmapData();
-            bitmapData.image = image;
-
-            const shape = root.addChild(new Shape());
-            shape.x = 150;
-            shape.y = 150;
-
-            shape.addEventListener(Event.COMPLETE, () => 
-            {
-                shape.scaleX = 0.5;
-                shape.scaleY = 0.5;
-                shape.filters = [
-                    // new BlurFilter(10, 10, 3),
-                    // new DropShadowFilter(20, 45, 0, 0.5),
-                    // new ColorMatrixFilter([
-                    //     0.393, 0.769, 0.189, 0, 0,
-                    //     0.349, 0.686, 0.168, 0, 0,
-                    //     0.272, 0.534, 0.131, 0, 0,
-                    //     0, 0, 0, 1, 0
-                    // ]),
-                    // new GlowFilter(0, 1, 30, 20, 1, 1),
-                    // new BevelFilter(4, 45, 0x0000ff, 1, 0, 1, 10, 10, 2, 1),
-                    // new GradientBevelFilter(80, 45, [0x0000ff, 0x00ff00, 0xff0000], [0, 0.5, 1], [0, 128, 255], 4, 4, 1, 1),
-                    // new GradientGlowFilter(4, 45, [0x000000, 0xffffff], [0, 1], [0, 255], 4, 4, 1, 1),
-                    // new ConvolutionFilter(3, 3, [
-                    //     0, -0.25, 0,
-                    //     -0.25, 4, -0.25,
-                    //     0, -0.25, 0
-                    // ], 1, 3, false, false),
-                    new DisplacementMapFilter(
-                        bitmapData.buffer, bitmapData.width, bitmapData.height, 40, 40,
-                        1, 2, 32, 32
-                    )
-                ];
-            });
-
-            shape.src = "http://localhost:5173/json/image/logo.png";
-        });
-        image.src = "http://localhost:5173/json/image/image.png";
+        next2d.load("develop");
 
         // const count = 8000;
         // const root = next2d
