--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     {
         // next2d.load("develop");
 
-        const root = await next2d.createRootMovieClip(400, 400, 60);
+        const root = await next2d.createRootMovieClip(400, 400, 60, {
+            bgColor: "#0000ff",
+        });
 
         const { Shape, BitmapData } = next2d.display;
         const { TextField } = next2d.text;
+        const { Video } = next2d.media;
         const { Event } = next2d.events;
         const {
             BlurFilter,
@@ -29,82 +32,125 @@
             DisplacementMapFilter
         } = next2d.filters;
 
-        // const image = new Image();
-        // image.addEventListener("load", () => 
-        // {
-        //     const bitmapData = new BitmapData();
-        //     bitmapData.image = image;
+        // // const image = new Image();
+        // // image.addEventListener("load", () => 
+        // // {
+        // //     const bitmapData = new BitmapData();
+        // //     bitmapData.image = image;
 
-        //     const shape = root.addChild(new Shape());
-        //     shape.x = 150;
-        //     shape.y = 150;
+        // //     const shape = root.addChild(new Shape());
+        // //     shape.x = 150;
+        // //     shape.y = 150;
 
-        //     shape.addEventListener(Event.COMPLETE, () => 
-        //     {
-        //         shape.scaleX = 0.5;
-        //         shape.scaleY = 0.5;
-        //         shape.filters = [
-        //             // new BlurFilter(10, 10, 3),
-        //             // new DropShadowFilter(20, 45, 0, 0.5),
-        //             // new ColorMatrixFilter([
-        //             //     0.393, 0.769, 0.189, 0, 0,
-        //             //     0.349, 0.686, 0.168, 0, 0,
-        //             //     0.272, 0.534, 0.131, 0, 0,
-        //             //     0, 0, 0, 1, 0
-        //             // ]),
-        //             // new GlowFilter(0, 1, 30, 20, 1, 1),
-        //             // new BevelFilter(4, 45, 0x0000ff, 1, 0, 1, 10, 10, 2, 1),
-        //             // new GradientBevelFilter(80, 45, [0x0000ff, 0x00ff00, 0xff0000], [0, 0.5, 1], [0, 128, 255], 4, 4, 1, 1),
-        //             // new GradientGlowFilter(4, 45, [0x000000, 0xffffff], [0, 1], [0, 255], 4, 4, 1, 1),
-        //                 // new ConvolutionFilter(3, 3, [
-        //                 //     0, -0.25, 0,
-        //                 //     -0.25, 4, -0.25,
-        //                 //     0, -0.25, 0
-        //                 // ], 1, 3, false, false),
-        //             new DisplacementMapFilter(
-        //                 bitmapData.buffer, bitmapData.width, bitmapData.height, 20, 20,
-        //                 1, 4, 32, 32
-        //             )
-        //         ];
-        //     });
+        // //     shape.addEventListener(Event.COMPLETE, () => 
+        // //     {
+        // //         shape.scaleX = 0.5;
+        // //         shape.scaleY = 0.5;
+        // //         shape.filters = [
+        // //             // new BlurFilter(10, 10, 3),
+        // //             // new DropShadowFilter(20, 45, 0, 0.5),
+        // //             // new ColorMatrixFilter([
+        // //             //     0.393, 0.769, 0.189, 0, 0,
+        // //             //     0.349, 0.686, 0.168, 0, 0,
+        // //             //     0.272, 0.534, 0.131, 0, 0,
+        // //             //     0, 0, 0, 1, 0
+        // //             // ]),
+        // //             // new GlowFilter(0, 1, 30, 20, 1, 1),
+        // //             // new BevelFilter(4, 45, 0x0000ff, 1, 0, 1, 10, 10, 2, 1),
+        // //             // new GradientBevelFilter(80, 45, [0x0000ff, 0x00ff00, 0xff0000], [0, 0.5, 1], [0, 128, 255], 4, 4, 1, 1),
+        // //             // new GradientGlowFilter(4, 45, [0x000000, 0xffffff], [0, 1], [0, 255], 4, 4, 1, 1),
+        // //                 // new ConvolutionFilter(3, 3, [
+        // //                 //     0, -0.25, 0,
+        // //                 //     -0.25, 4, -0.25,
+        // //                 //     0, -0.25, 0
+        // //                 // ], 1, 3, false, false),
+        // //             new DisplacementMapFilter(
+        // //                 bitmapData.buffer, bitmapData.width, bitmapData.height, 20, 20,
+        // //                 1, 4, 32, 32
+        // //             )
+        // //         ];
+        // //     });
 
-        //     shape.src = "http://localhost:5173/json/image/logo.png";
-        // });
-        // image.src = "http://localhost:5173/json/image/image.png";
+        // //     shape.src = "http://localhost:5173/json/image/logo.png";
+        // // });
+        // // image.src = "http://localhost:5173/json/image/image.png";
 
-        const shape1 = root.addChild(new Shape());
-        shape1.x = 150;
-        shape1.y = 150;
+        // const shape1 = root.addChild(new Shape());
+        // shape1.x = 150;
+        // shape1.y = 150;
 
-        shape1
-            .graphics
-            .beginFill("#ff0000")
-            .drawRect(0, 0, 100, 100);
-
-        // const shape2 = root.addChild(new Shape());
-        // shape2.x = 100;
-        // shape2.y = 100;
-        // // shape2.rotation = 10;
-        // shape2
+        // shape1
         //     .graphics
-        //     .beginFill("#00ff00")
-        //     .moveTo(0, 0)
-        //     .lineTo(100, 0)
-        //     .lineTo(100, 100)
-        //     .lineTo(0, 0)
-        //     .endFill();
+        //     .beginFill("#ff0000")
+        //     .drawRect(0, 0, 100, 100);
 
-        // shape2.blendMode = "invert";
+        const textField = root.addChild(new TextField());
+        textField.x = 50;
+        textField.y = 80;
+        textField.width = 190;
+        textField.rotation = 35;
+
+        const textFormat = textField.defaultTextFormat;
+        textFormat.size  = 35;
+        textFormat.color = "#00ff00";
+        textField.defaultTextFormat = textFormat;
+
+        textField.text = "Hello World!";
+
+        textField.filters = [
+            new BlurFilter(4, 4, 2),
+        ];
+
+        // textField.blendMode = "invert";
+
+        const shape2 = root.addChild(new Shape());
+        shape2.x = 100;
+        shape2.y = 100;
+        shape2.rotation = 25;
+        shape2
+            .graphics
+            .beginFill("#00ff00")
+            .moveTo(0, 0)
+            .lineTo(100, 0)
+            .lineTo(100, 100)
+            .lineTo(0, 0)
+            .endFill();
+
+        shape2.blendMode = "invert";
 
         const shape3 = root.addChild(new Shape());
         shape3.x = 200;
         shape3.y = 100;
         shape3.scaleX = 0.5;
         shape3.scaleY = 0.5;
-        shape3.rotation = 5;
+        shape3.rotation = 15;
         shape3.src = "http://localhost:5173/json/image/logo.png";
 
-        shape3.blendMode = "multiply";
+        shape3.filters = [
+            new BlurFilter(10, 10, 2),
+        ];
+
+
+        // shape3.blendMode = "multiply";
+
+        const video = root.addChild(new Video());
+        video.x = 130;
+        video.y = 40;
+        video.rotation = 40;
+        video.scaleX = 0.12;
+        video.scaleY = 0.12; 
+        video.src = "http://localhost:5173/json/image/video.mp4";
+        video.blendMode = "multiply";
+
+        // video.filters = [
+        //     new BlurFilter(30, 20, 3),
+        // //     new ColorMatrixFilter([
+        // //         0.393, 0.769, 0.189, 0, 0,
+        // //         0.349, 0.686, 0.168, 0, 0,
+        // //         0.272, 0.534, 0.131, 0, 0,
+        // //         0, 0, 0, 1, 0
+        // //     ]),
+        // ];
 
         // const count = 8000;
         // const root = next2d
