--- a/index.html
+++ b/index.html
@@ -140,17 +140,17 @@
         video.scaleX = 0.12;
         video.scaleY = 0.12; 
         video.src = "http://localhost:5173/json/image/video.mp4";
-        video.blendMode = "multiply";
+        // video.blendMode = "multiply";
 
-        // video.filters = [
-        //     new BlurFilter(30, 20, 3),
-        // //     new ColorMatrixFilter([
-        // //         0.393, 0.769, 0.189, 0, 0,
-        // //         0.349, 0.686, 0.168, 0, 0,
-        // //         0.272, 0.534, 0.131, 0, 0,
-        // //         0, 0, 0, 1, 0
-        // //     ]),
-        // ];
+        video.filters = [
+            // new BlurFilter(30, 20, 3),
+            new ColorMatrixFilter([
+                0.393, 0.769, 0.189, 0, 0,
+                0.349, 0.686, 0.168, 0, 0,
+                0.272, 0.534, 0.131, 0, 0,
+                0, 0, 0, 1, 0
+            ]),
+        ];
 
         // const count = 8000;
         // const root = next2d
