--- a/index.html
+++ b/index.html
@@ -98,41 +98,41 @@
         textField.text = "Hello World!";
 
         textField.filters = [
-            new GlowFilter(0, 1, 30, 20, 1, 1)
+            new BlurFilter(10, 10, 1)
         ];
 
         textField.blendMode = "invert";
 
-        const shape2 = root.addChild(new Shape());
-        shape2.x = 100;
-        shape2.y = 100;
-        shape2.rotation = 25;
-        shape2
-            .graphics
-            .beginFill("#00ff00")
-            .moveTo(0, 0)
-            .lineTo(100, 0)
-            .lineTo(100, 100)
-            .lineTo(0, 0)
-            .endFill();
+        // const shape2 = root.addChild(new Shape());
+        // shape2.x = 100;
+        // shape2.y = 100;
+        // shape2.rotation = 25;
+        // shape2
+        //     .graphics
+        //     .beginFill("#00ff00")
+        //     .moveTo(0, 0)
+        //     .lineTo(100, 0)
+        //     .lineTo(100, 100)
+        //     .lineTo(0, 0)
+        //     .endFill();
 
-        shape2.blendMode = "invert";
-        shape2.filters = [
-            new BlurFilter(30, 30, 2),
-        ];
+        // shape2.blendMode = "invert";
+        // shape2.filters = [
+        //     new BlurFilter(30, 30, 2),
+        // ];
 
-        const shape3 = root.addChild(new Shape());
-        shape3.x = 200;
-        shape3.y = 100;
-        shape3.scaleX = 0.5;
-        shape3.scaleY = 0.5;
-        shape3.rotation = 15;
-        shape3.src = "http://localhost:5173/json/image/logo.png";
+        // const shape3 = root.addChild(new Shape());
+        // shape3.x = 200;
+        // shape3.y = 100;
+        // shape3.scaleX = 0.5;
+        // shape3.scaleY = 0.5;
+        // shape3.rotation = 15;
+        // shape3.src = "http://localhost:5173/json/image/logo.png";
 
-        shape3.filters = [
-            new BevelFilter(4, 45, 0x0000ff, 1, 0, 1, 10, 10, 2, 1)
-        ];
-        shape3.blendMode = "screen";
+        // shape3.filters = [
+        //     new BevelFilter(4, 45, 0x0000ff, 1, 0, 1, 10, 10, 2, 1)
+        // ];
+        // shape3.blendMode = "screen";
 
         const video = root.addChild(new Video());
         video.x = 130;
@@ -141,17 +141,18 @@
         video.scaleX = 0.12;
         video.scaleY = 0.12; 
         video.src = "http://localhost:5173/json/image/video.mp4";
-        video.blendMode = "subtract";
+        video.blendMode = "screen";
 
-        video.filters = [
-            new BlurFilter(40, 40, 3),
-            // new ColorMatrixFilter([
-            //     0.393, 0.769, 0.189, 0, 0,
-            //     0.349, 0.686, 0.168, 0, 0,
-            //     0.272, 0.534, 0.131, 0, 0,
-            //     0, 0, 0, 1, 0
-            // ]),
-        ];
+        // video.filters = [
+        //     new BlurFilter(40, 40, 3),
+        //     new DropShadowFilter(180, 95, 0, 0.5),
+        //     new ColorMatrixFilter([
+        //         0.393, 0.769, 0.189, 0, 0,
+        //         0.349, 0.686, 0.168, 0, 0,
+        //         0.272, 0.534, 0.131, 0, 0,
+        //         0, 0, 0, 1, 0
+        //     ]),
+        // ];
 
         // const count = 8000;
         // const root = next2d
