--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 <script>
     window.addEventListener("DOMContentLoaded", async () => 
     {
-        // next2d.load("develop");
+        next2d.load("develop");
 
-        const root = await next2d.createRootMovieClip(400, 400, 60, {
-            bgColor: "#0000ff",
-        });
+        const root = await next2d.createRootMovieClip(400, 400, 60);
 
         const { Shape, BitmapData } = next2d.display;
         const { TextField } = next2d.text;
@@ -32,48 +30,48 @@
             DisplacementMapFilter
         } = next2d.filters;
 
-        // // const image = new Image();
-        // // image.addEventListener("load", () => 
-        // // {
-        // //     const bitmapData = new BitmapData();
-        // //     bitmapData.image = image;
+        // const image = new Image();
+        // image.addEventListener("load", () => 
+        // {
+        //     const bitmapData = new BitmapData();
+        //     bitmapData.image = image;
 
-        // //     const shape = root.addChild(new Shape());
-        // //     shape.x = 150;
-        // //     shape.y = 150;
+        //     const shape = root.addChild(new Shape());
+        //     shape.x = 150;
+        //     shape.y = 150;
 
-        // //     shape.addEventListener(Event.COMPLETE, () => 
-        // //     {
-        // //         shape.scaleX = 0.5;
-        // //         shape.scaleY = 0.5;
-        // //         shape.filters = [
-        // //             // new BlurFilter(10, 10, 3),
-        // //             // new DropShadowFilter(20, 45, 0, 0.5),
-        // //             // new ColorMatrixFilter([
-        // //             //     0.393, 0.769, 0.189, 0, 0,
-        // //             //     0.349, 0.686, 0.168, 0, 0,
-        // //             //     0.272, 0.534, 0.131, 0, 0,
-        // //             //     0, 0, 0, 1, 0
-        // //             // ]),
-        // //             // new GlowFilter(0, 1, 30, 20, 1, 1),
-        // //             // new BevelFilter(4, 45, 0x0000ff, 1, 0, 1, 10, 10, 2, 1),
-        // //             // new GradientBevelFilter(80, 45, [0x0000ff, 0x00ff00, 0xff0000], [0, 0.5, 1], [0, 128, 255], 4, 4, 1, 1),
-        // //             // new GradientGlowFilter(4, 45, [0x000000, 0xffffff], [0, 1], [0, 255], 4, 4, 1, 1),
-        // //                 // new ConvolutionFilter(3, 3, [
-        // //                 //     0, -0.25, 0,
-        // //                 //     -0.25, 4, -0.25,
-        // //                 //     0, -0.25, 0
-        // //                 // ], 1, 3, false, false),
-        // //             new DisplacementMapFilter(
-        // //                 bitmapData.buffer, bitmapData.width, bitmapData.height, 20, 20,
-        // //                 1, 4, 32, 32
-        // //             )
-        // //         ];
-        // //     });
+        //     shape.addEventListener(Event.COMPLETE, () => 
+        //     {
+        //         shape.scaleX = 0.5;
+        //         shape.scaleY = 0.5;
+        //         shape.filters = [
+        //             // new BlurFilter(10, 10, 3),
+        //             // new DropShadowFilter(20, 45, 0, 0.5),
+        //             // new ColorMatrixFilter([
+        //             //     0.393, 0.769, 0.189, 0, 0,
+        //             //     0.349, 0.686, 0.168, 0, 0,
+        //             //     0.272, 0.534, 0.131, 0, 0,
+        //             //     0, 0, 0, 1, 0
+        //             // ]),
+        //             // new GlowFilter(0, 1, 30, 20, 1, 1),
+        //             // new BevelFilter(4, 45, 0x0000ff, 1, 0, 1, 10, 10, 2, 1),
+        //             // new GradientBevelFilter(80, 45, [0x0000ff, 0x00ff00, 0xff0000], [0, 0.5, 1], [0, 128, 255], 4, 4, 1, 1),
+        //             // new GradientGlowFilter(4, 45, [0x000000, 0xffffff], [0, 1], [0, 255], 4, 4, 1, 1),
+        //                 // new ConvolutionFilter(3, 3, [
+        //                 //     0, -0.25, 0,
+        //                 //     -0.25, 4, -0.25,
+        //                 //     0, -0.25, 0
+        //                 // ], 1, 3, false, false),
+        //             new DisplacementMapFilter(
+        //                 bitmapData.buffer, bitmapData.width, bitmapData.height, 40, 40,
+        //                 1, 4, 32, 32
+        //             )
+        //         ];
+        //     });
 
-        // //     shape.src = "http://localhost:5173/json/image/logo.png";
-        // // });
-        // // image.src = "http://localhost:5173/json/image/image.png";
+        //     shape.src = "http://localhost:5173/json/image/logo.png";
+        // });
+        // image.src = "http://localhost:5173/json/image/image.png";
 
         // const shape1 = root.addChild(new Shape());
         // shape1.x = 150;
@@ -87,7 +85,8 @@
         const textField = root.addChild(new TextField());
         textField.x = 50;
         textField.y = 80;
-        textField.width = 190;
+        textField.width = 240;
+        // textField.border = true;
         textField.rotation = 35;
 
         const textFormat = textField.defaultTextFormat;
@@ -97,9 +96,9 @@
 
         textField.text = "Hello World!";
 
-        textField.filters = [
-            new BlurFilter(10, 10, 1)
-        ];
+        // textField.filters = [
+        //     new BlurFilter(10, 10, 1)
+        // ];
 
         textField.blendMode = "invert";
 
@@ -143,60 +142,60 @@
         video.src = "http://localhost:5173/json/image/video.mp4";
         video.blendMode = "screen";
 
-        // video.filters = [
-        //     new BlurFilter(40, 40, 3),
-        //     new DropShadowFilter(180, 95, 0, 0.5),
-        //     new ColorMatrixFilter([
-        //         0.393, 0.769, 0.189, 0, 0,
-        //         0.349, 0.686, 0.168, 0, 0,
-        //         0.272, 0.534, 0.131, 0, 0,
-        //         0, 0, 0, 1, 0
-        //     ]),
-        // ];
+        video.filters = [
+            // new BlurFilter(40, 40, 3),
+            // new DropShadowFilter(180, 95, 0, 0.5),
+            new ColorMatrixFilter([
+                0.393, 0.769, 0.189, 0, 0,
+                0.349, 0.686, 0.168, 0, 0,
+                0.272, 0.534, 0.131, 0, 0,
+                0, 0, 0, 1, 0
+            ]),
+        ];
 
         // const count = 8000;
         // const root = next2d
         //     .createRootMovieClip(1000, 416, 60)
         //     .then((root) => 
-        //     {
-        //         const { Shape } = next2d.display;
+            // {
+            //     const { Shape } = next2d.display;
                 
-        //         const rects = [];
-        //         for (let i = 0; i < count; i++) {
-        //             const x = Math.random() * 1000;
-        //             const y = Math.random() * 416;
-        //             const size = 10 + Math.random() * 40;
-        //             const speed = 1 + Math.random();
+            //     const rects = [];
+            //     for (let i = 0; i < count; i++) {
+            //         const x = Math.random() * 1000;
+            //         const y = Math.random() * 416;
+            //         const size = 10 + Math.random() * 40;
+            //         const speed = 1 + Math.random();
 
-        //             var rect = new Shape();
+            //         var rect = new Shape();
 
-        //             rect
-        //                 .graphics
-        //                 .beginFill("#fff")
-        //                 .lineStyle(1, "#000")
-        //                 .drawRect(0, 0, size, size);
+                //     rect
+                //         .graphics
+                //         .beginFill("#fff")
+                //         .lineStyle(1, "#000")
+                //         .drawRect(0, 0, size, size);
 
-        //             rect.x = x;
-        //             rect.y = y;
+                //     rect.x = x;
+                //     rect.y = y;
 
-        //             root.addChild(rect);
+                //     root.addChild(rect);
 
-        //             rects.push({ size, speed, el: rect });
-        //         }
+                //     rects.push({ size, speed, el: rect });
+                // }
 
-        //         root.addEventListener("enterFrame", () =>
-        //         {
-        //             for (let i = 0; i < count; i++) {
-        //                 const rect = rects[i];
+                // root.addEventListener("enterFrame", () =>
+            //     {
+            //         for (let i = 0; i < count; i++) {
+            //             const rect = rects[i];
 
-        //                 if (rect.el.x + rect.size < 0) {
-        //                     rect.el.x = 1000 + rect.size / 2;
-        //                 }
+            //             if (rect.el.x + rect.size < 0) {
+            //                 rect.el.x = 1000 + rect.size / 2;
+            //             }
 
-        //                 rect.el.x -= rect.speed;
-        //             }
-        //         });
-        //     });
+            //             rect.el.x -= rect.speed;
+            //         }
+            //     });
+            // });
 
     });
 </script>
