--- a/index.html
+++ b/index.html
@@ -12,23 +12,25 @@
     {
         next2d.load("develop");
 
-        const root = await next2d.createRootMovieClip(400, 400, 60);
+        // const root = await next2d.createRootMovieClip(400, 400, 60, {
+        //     bgColor: "#0000ff"
+        // });
 
-        const { Shape, BitmapData } = next2d.display;
-        const { TextField } = next2d.text;
-        const { Video } = next2d.media;
-        const { Event } = next2d.events;
-        const {
-            BlurFilter,
-            ColorMatrixFilter,
-            GlowFilter,
-            BevelFilter,
-            GradientBevelFilter,
-            GradientGlowFilter,
-            DropShadowFilter,
-            ConvolutionFilter,
-            DisplacementMapFilter
-        } = next2d.filters;
+        // const { Shape, BitmapData } = next2d.display;
+        // const { TextField } = next2d.text;
+        // const { Video } = next2d.media;
+        // const { Event } = next2d.events;
+        // const {
+        //     BlurFilter,
+        //     ColorMatrixFilter,
+        //     GlowFilter,
+        //     BevelFilter,
+        //     GradientBevelFilter,
+        //     GradientGlowFilter,
+        //     DropShadowFilter,
+        //     ConvolutionFilter,
+        //     DisplacementMapFilter
+        // } = next2d.filters;
 
         // const image = new Image();
         // image.addEventListener("load", () => 
@@ -82,25 +84,25 @@
         //     .beginFill("#ff0000")
         //     .drawRect(0, 0, 100, 100);
 
-        const textField = root.addChild(new TextField());
-        textField.x = 50;
-        textField.y = 80;
-        textField.width = 240;
-        // textField.border = true;
-        textField.rotation = 35;
+        // const textField = root.addChild(new TextField());
+        // textField.x = 50;
+        // textField.y = 80;
+        // textField.width = 240;
+        // // textField.border = true;
+        // textField.rotation = 35;
 
-        const textFormat = textField.defaultTextFormat;
-        textFormat.size  = 35;
-        textFormat.color = "#00ff00";
-        textField.defaultTextFormat = textFormat;
+        // const textFormat = textField.defaultTextFormat;
+        // textFormat.size  = 35;
+        // textFormat.color = "#00ff00";
+        // textField.defaultTextFormat = textFormat;
 
-        textField.text = "Hello World!";
+        // textField.text = "Hello World!";
 
         // textField.filters = [
         //     new BlurFilter(10, 10, 1)
         // ];
 
-        textField.blendMode = "invert";
+        // textField.blendMode = "invert";
 
         // const shape2 = root.addChild(new Shape());
         // shape2.x = 100;
@@ -133,25 +135,25 @@
         // ];
         // shape3.blendMode = "screen";
 
-        const video = root.addChild(new Video());
-        video.x = 130;
-        video.y = 40;
-        video.rotation = 40;
-        video.scaleX = 0.12;
-        video.scaleY = 0.12; 
-        video.src = "http://localhost:5173/json/image/video.mp4";
-        video.blendMode = "screen";
+        // const video = root.addChild(new Video());
+        // video.x = 130;
+        // video.y = 40;
+        // video.rotation = 40;
+        // video.scaleX = 0.12;
+        // video.scaleY = 0.12; 
+        // video.src = "http://localhost:5173/json/image/video.mp4";
+        // video.blendMode = "screen";
 
-        video.filters = [
-            // new BlurFilter(40, 40, 3),
-            // new DropShadowFilter(180, 95, 0, 0.5),
-            new ColorMatrixFilter([
-                0.393, 0.769, 0.189, 0, 0,
-                0.349, 0.686, 0.168, 0, 0,
-                0.272, 0.534, 0.131, 0, 0,
-                0, 0, 0, 1, 0
-            ]),
-        ];
+        // video.filters = [
+        //     // new BlurFilter(40, 40, 3),
+        //     // new DropShadowFilter(180, 95, 0, 0.5),
+        //     new ColorMatrixFilter([
+        //         0.393, 0.769, 0.189, 0, 0,
+        //         0.349, 0.686, 0.168, 0, 0,
+        //         0.272, 0.534, 0.131, 0, 0,
+        //         0, 0, 0, 1, 0
+        //     ]),
+        // ];
 
         // const count = 8000;
         // const root = next2d
