#154 不要なasync処理を削除

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         // shape3.src = "http://localhost:5173/json/image/logo.png";
 
         // shape3.filters = [
-        //     new BevelFilter(4, 45, 0x0000ff, 1, 0, 1, 10, 10, 2, 1)
+        //     new BlurFilter(10, 10, 5),
         // ];
         // shape3.blendMode = "screen";
 
