#154 キャプチャーの引数をoptionに統合

--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
 
         // setTimeout(async () => 
         // {
-        //     const canvas = await next2d.captureToCanvas(shape3, new Matrix(2, 0, 0, 2, 0, 0));
+        //     const canvas = await next2d.captureToCanvas(root, {
+        //         "matrix": new Matrix(2, 0, 0, 2, 0, 0)
+        //     });
         //     console.log(canvas.toDataURL());
         // }, 3000);
 
